force-app/main/default/objects/Target__c/fields/Target_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Target_Metrics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Metrics</label>
    <referenceTo>Target_Metrics__c</referenceTo>
    <relationshipLabel>Target</relationshipLabel>
    <relationshipName>Target</relationshipName>
    <type>Lookup</type>
</CustomField>