force-app/main/default/objects/Target__c/fields/Target_Period__c.field-meta.xml
<CustomField>
    <fullName>Target_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Period</label>
    <referenceTo>Period__c</referenceTo>
    <relationshipLabel>Target</relationshipLabel>
    <relationshipName>Target</relationshipName>
    <type>Lookup</type>
</CustomField>