force-app/main/default/objects/Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Executive__c</columns>
    <columns>Target_Metrics__c</columns>
    <columns>Target_Period__c</columns>
    <columns>Target__c</columns>
    <columns>Actual__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>